tests/baselines/reference/unusedTypeParameterInLambda3.errors.txt
unusedTypeParameterInLambda3.ts(5,15): error TS6133: 'U' is declared but its value is never read.


==== unusedTypeParameterInLambda3.ts (1 errors) ====
    class A<T> {
        public x: T;
    }
    
    var y: new <T,U>(a:T)=>void;
                  ~
!!! error TS6133: 'U' is declared but its value is never read.
    